# graph-of-humanity-contracts

./: Anchor.toml  package.json
programs/graph-of-humanity/: Cargo.toml
programs/graph-of-humanity/src/: constants.rs  error.rs  event.rs  lib.rs  state.rs  utils.rs
programs/graph-of-humanity/src/instructions/: apply_citizenship.rs  become_member.rs  check_result.rs  claim_reward.rs  claim_ubi.rs  donate_money.rs  edit_bio.rs  edit_user.rs  edit_username.rs  fund_citizenship_appl.rs  fund_voucher.rs  initialize.rs  mod.rs  request_randomness_voters.rs  request_ubi_randomness.rs  reveal_randomness_voters.rs  reveal_ubi_randomness.rs  start_distribution_epoch.rs  vote.rs
tests/: graph-of-humanity.ts  utils.ts
