[package]
name = "graph-of-humanity"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "graph_of_humanity"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
sha2 = "0.10.8"
switchboard-on-demand = "0.1.14"
orao-solana-vrf = { path = "../../../solana-vrf/rust/sdk", default-features = false, features = [
    "cpi",
] }
